--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang='en'>
-  <head>
-    <title>About Page</title>
-    <link rel="stylesheet" href="style.css"/>
-  </head>
-
-    <body>
-        <h1>About Page</h1>
-        <footer>&copy; 2020 HSE</footer>
-    </body>
-
-</html>
+firsthtml.html
